# Lettuce

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  build.md  scheme.drawio  vcpkg.json  xmake.lua
ClearScreenSample/: app.cpp
Lettuce/: Buffer.ixx  CommandList.ixx  CommandPool.ixx  ComputePipeline.ixx  Descriptor.ixx  DescriptorLayout.ixx  DescriptorPool.ixx  Device.ixx  GPU.ixx  GraphicsPipeline.ixx  Instance.ixx  Lettuce.ixx  Loader.ixx  MeshPipeline.ixx  PipelineConnector.ixx  Sampler.ixx  Semaphore.ixx  Shader.ixx  Swapchain.ixx  SynchronizationStructure.ixx  Texture.ixx  TextureView.ixx  Utils.ixx  Version.ixx
Lettuce/Compilers/: GLSLCompiler.ixx  ICompiler.ixx
Lettuce/Core/: Buffer.cpp  BufferResource.cpp  CommandList.cpp  CommandPool.cpp  Common.cpp  ComputePipeline.cpp  Descriptor.cpp  DescriptorLayout.cpp  DescriptorLayoutGroup.cpp  DescriptorSetGroup.cpp  Descriptors.cpp  Device.cpp  GPU.cpp  GraphicsPipeline.cpp  GraphicsPipelineLibrary.cpp  ImageResource.cpp  ImageViewResource.cpp  IndirectCommandsLayout.cpp  IndirectExecutionSet.cpp  Instance.cpp  MemoryBlock.cpp  MeshPipeline.cpp  PipelineConnector.cpp  PipelineLayout.cpp  RenderPass.cpp  ResourcePool.cpp  Sampler.cpp  Semaphore.cpp  Shader.cpp  ShaderModule.cpp  Swapchain.cpp  TaskGraph.cpp  TasksGraph.cpp  Texture.cpp  TextureView.cpp  TransferManager.cpp  Utils.cpp  VmaUsage.cpp  common.cpp  otherUtils.h
Lettuce/Core/Compilers/: GLSLCompiler.cpp  HLSLCompiler.cpp  ICompiler.cpp  SlangCompiler.cpp
Lettuce/Foundation/: Attachment.cpp  RenderGraph.cpp  RenderGroup.cpp  Resource.cpp  TaskGraph.cpp  WorkFlowGraph.cpp
Lettuce/X2D/: Camera2D.cpp  RenderContext.cpp  RenderContext2D.cpp
Lettuce/X2D/Effects/: EffectBase.cpp
Lettuce/X2D/Geometries/: Rectangle.cpp
Lettuce/X2D/Lights/: AmbientLight.cpp  GeometryLight.cpp  PointLight.cpp
Lettuce/X2D/Materials/: ColorMaterial.cpp  GlassMaterial.cpp  MaterialBase.cpp
Lettuce/X3D/: Camera3D.cpp  Mesh.cpp  Scene.cpp
Lettuce/X3D/Geometries/: Plane.cpp  Prism.cpp  Sphere.cpp
Lettuce3D/: Lettuce3D.ixx  Scene.ixx  Scene3D.ixx
LettuceCore/: CMakeLists.txt  Device.cpp  Factory.cpp  GPU.cpp  Lettuce.Core.h
TriangleSample/: CMakeLists.txt  main.cpp
docs/: 1_0_Lettuce.md  1_1_Structure.md  1_2_API_Specification.md
gcm.cache/: math.gcm
include/Core/: Buffer.hpp  CommandList.hpp  CommandPool.hpp  ComputePipeline.hpp  Descriptor.hpp  DescriptorLayout.hpp  Device.hpp  GPU.hpp  GraphicsPipeline.hpp  Instance.cpp  MeshPipeline.cpp  PipelineConnector.hpp  Sampler.hpp  Semaphore.hpp  Shader.hpp  Swapchain.hpp  TextureView.hpp  Utils.hpp  Version.hpp
include/Core/Compilers/: GLSLCompiler.cpp
include/Lettuce/: Lettuce.Core.hpp  Lettuce.Foundation.hpp  Lettuce.X2D.hpp  Lettuce.X3D.hpp  Lettuce.hpp  helper.hpp
include/Lettuce/Composition/: api.hpp  (+3 more)
renderer/: app.cpp
renderer/core/: Core.ixx  Module.ixx  TaskGraph.ixx  TaskNode.ixx
renderer/include/: Core.hpp
rules/: hlsl.lua  slang.lua
samples/ClearScreenSample/: app.cpp  readme.md
samples/DonutSample/: app.cpp
samples/GeometryIndirectSample/: app.cpp
samples/GeometrySample/: app.cpp
samples/LoadModel/: app.cpp
samples/SampleFramework/: LettuceSampleApp.hpp
samples/SampleX2D/: app.cpp
samples/ShadowMaps/: app.cpp
samples/SkyBox/: app.cpp
samples/TriangleSample/: app.cpp
samples/VertexCube/: app.cpp
samples/VertexSquare/: app.cpp
samples/assets/: enviroment_cubemap.ktx2
samples/asyncRecord/: app.cpp  asyncRecord.slang
samples/cubemap/: app.cpp  cubemap.frag.hlsl  cubemap.vert.hlsl
samples/cubes/: app.cpp  cubes.slang
samples/grass/: app.cpp  grass.slang
samples/helloTriangle/: app.cpp  app.slang  helloTriangle.slang
samples/helloTriangleMesh/: app.cpp  helloTriangleMesh.slang  helloTriangleMesh.slang.temp  hellotriangleMesh.frag.hlsl  hellotriangleMesh.mesh.hlsl  hellotriangleMesh.task.hlsl
samples/indirectDrawing/: app.cpp  indirectDrawing.slang
samples/loadModel/: app.cpp  loadModel.slang
samples/movingSquares/: app.cpp
samples/pbr/: app.cpp  pbr.slang  structs.slang
samples/sceneTreeDemo/: app.cpp  sceneTreeDemo.slang
samples/tester/: app.cpp
samples/textureLoad/: app.cpp  textureLoad.frag.hlsl  textureLoad.vert.hlsl
samples/uniform/: app.cpp  uniform.slang
src/Composition/: AnimationToken.cpp  Brush.Anim.cpp  Brush.Props.cpp  CompositionMaterials.part.slang  CompositionShader.slang  CompositionStructs.part.slang  CompositionStructs.slang  Compositor.cpp  CompositorImpl.cpp  DropShadow.Props.cpp  DropShadow.cpp  Effect.Anim.cpp  Effect.Props.cpp  Effect.cpp  Font.cpp  Geometry.Props.cpp  Geometry.cpp  Light.Anim.cpp  Light.Props.cpp  Light.cpp  Material.Props.cpp  Material.cpp  Visual.Anim.cpp  Visual.Props.cpp  Visual.cpp
src/Core/: AssetLoader.cpp  Buffer.cpp  CommandAllocator.cpp  CommandBuffer.cpp  CommandList.cpp  CommandRecordingContext.cpp  DescriptorTable.cpp  Device.cpp  DeviceCreateFunctions.cpp  DeviceExecutionContext.cpp  DeviceFunctions.cpp  DeviceImpl.cpp  DeviceThreadPool.cpp  DeviceVector.cpp  FrameContext.cpp  GPU.cpp  IndirectSet.cpp  Infos.cpp  Memory.cpp  MemoryCopy.cpp  MemoryCopyCmd.cpp  MemoryHeap.cpp  MemoryView.cpp  Mesh.cpp  Pipeline.cpp  PipelineLayout.cpp  RenderFlowGraph.cpp  RenderTarget.cpp  ResourceDictionary.cpp  Sampler.cpp  SequentialExecutionContext.cpp  ShaderBinary.cpp  ShaderPack.cpp  Swapchain.cpp  TableGroup.cpp  Texture.cpp  TextureArray.cpp  TextureDictionary.cpp  TextureView.cpp  common.cpp  (+1 more)
src/Lettuce.Core/: GPU.ixx  LettuceRenderContext.cpp  LettuceRenderContext.ixx
src/Quimera/: Surface.cpp  SurfaceCommandBuffer.cpp  SurfaceImpl.cpp  comp.surface.slang  funcs.part.slang  types.part.slang
src/Rendering/: AsyncRecorder.cpp  CommandRecordingContext.cpp  DeviceCreateFunctions.cpp  DeviceVector.cpp  Renderable.cpp  SceneGraph.cpp  SceneGraphImpl.cpp  SceneNode.cpp  SceneTree.cmd.build.cpp  SceneTree.cmd.update.cpp  SceneTree.cpp  SceneTreeImpl.cpp  comp.build.slang  comp.sceneTree.slang  comp.update.slang  types.part.slang
src/Utils/: AssetLoader.cpp  Camera3D.cpp
(+168 files in other folders)
